--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <button id="deleteRow">Satır Sil</button>
         <button id="boldText">Kalın Yap</button>
         <button id="save">Kaydet</button>
-        <table id="spreadsheet">
+        <table id="spreadsheet" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
             <thead>
                 <tr>
-                    <th>Başlık 1</th>
-                    <th>Başlık 2</th>
-                    <th>Başlık 3</th>
+                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 1</th>
+                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 2</th>
+                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 3</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td contenteditable="true"></td>
-                    <td contenteditable="true"></td>
-                    <td contenteditable="true"></td>
+                    <td contenteditable="true" style="border: 1px solid #ddd; padding: 10px;"></td>
+                    <td contenteditable="true" style="border: 1px solid #ddd; padding: 10px;"></td>
+                    <td contenteditable="true" style="border: 1px solid #ddd; padding: 10px;"></td>
                 </tr>
             </tbody>
         </table>
