--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <div class="container">
         <button id="addRow">Satır Ekle</button>
         <button id="deleteRow">Satır Sil</button>
+        <button id="addColumn">Sütun Ekle</button>
         <button id="boldText">Kalın Yap</button>
         <button id="save">Kaydet</button>
         <table id="spreadsheet" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
             <thead>
                 <tr>
-                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 1</th>
-                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 2</th>
-                    <th style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 3</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 1</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 2</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 3</th>
                 </tr>
             </thead>
             <tbody>
