--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <table id="spreadsheet" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
             <thead>
                 <tr>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0; position: relative;">Başlık 1</th>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0; position: relative;">Başlık 2</th>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0; position: relative;">Başlık 3</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 1</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 2</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 3</th>
                 </tr>
             </thead>
             <tbody>
