--- a/index.html
+++ b/index.html
@@ -17,9 +17,27 @@
         <table id="spreadsheet" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
             <thead>
                 <tr>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 1</th>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 2</th>
-                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">Başlık 3</th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
+                        <div class="header-buttons">
+                            <button class="increase-width" data-index="0">></button>
+                            <button class="decrease-width" data-index="0"><</button>
+                        </div>
+                        Başlık 1
+                    </th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
+                        <div class="header-buttons">
+                            <button class="increase-width" data-index="1">></button>
+                            <button class="decrease-width" data-index="1"><</button>
+                        </div>
+                        Başlık 2
+                    </th>
+                    <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
+                        <div class="header-buttons">
+                            <button class="increase-width" data-index="2">></button>
+                            <button class="decrease-width" data-index="2"><</button>
+                        </div>
+                        Başlık 3
+                    </th>
                 </tr>
             </thead>
             <tbody>
