--- a/index.html
+++ b/index.html
@@ -19,22 +19,19 @@
                 <tr>
                     <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
                         <div class="header-buttons">
-                            <button class="increase-width" data-index="0">></button>
-                            <button class="decrease-width" data-index="0"><</button>
+                            <button class="delete-column" data-index="0">x</button>
                         </div>
                         Başlık 1
                     </th>
                     <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
                         <div class="header-buttons">
-                            <button class="increase-width" data-index="1">></button>
-                            <button class="decrease-width" data-index="1"><</button>
+                            <button class="delete-column" data-index="1">x</button>
                         </div>
                         Başlık 2
                     </th>
                     <th contenteditable="true" style="border: 1px solid #ddd; padding: 10px; background-color: #f0f0f0;">
                         <div class="header-buttons">
-                            <button class="increase-width" data-index="2">></button>
-                            <button class="decrease-width" data-index="2"><</button>
+                            <button class="delete-column" data-index="2">x</button>
                         </div>
                         Başlık 3
                     </th>
